# orgize

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  Justfile  README.md  build.rs  development.org  devenv.nix
.github/workflows/: ci.yml  release.yml
benches/: .gitignore  parse.rs
benches/fixtures/: block-code-refs.org  block-header-args.org  block-line-numbers.org  doc.org  file-todo-keywords.org  internal-links.org  org-faq.org  org-hacks.org  org-release-notes.org  org-syntax.org  plain-links.org  preprocessing-directives.org  quote-heavy.org  radio-links.org  table-column-metadata.org
build-support/: Cargo.toml
build-support/src/: builtin_lint_contracts.rs  lib.rs
contracts/builtin-lint/: document-metadata.v1.org
docs/: ORGIZE_AGENT_SUBSTRATE.org  PARSER_V2_PERFORMANCE_CLOSEOUT.md  PARSER_V2_PERFORMANCE_CLOSEOUT.org  PARSER_V2_RELEASE_READINESS.md  PARSER_V2_RELEASE_READINESS.org  STATUS.md  STATUS.org  index.org  topology.toml
docs/00_index/: 00.01_jdex.org
docs/10_architecture/: 10.01_agent_substrate.org  10.02_agent_memory_projection.org  10.03_agent_search_memory_org_mode_audit.org  10.04_wendao_section_index_adapter_contract.org  10.05_agent_capture_protocol.org  10.06_org_native_sdd_substrate.org  10.07_orgize_wasm_sync_surface.org
docs/20_parser/: 20.01_parser_v2_release_readiness.org  20.02_parser_v2_performance_closeout.org  20.03_property_schema_registry.schema.json  20.03_property_schema_registry_contract.org  20.04_org_elements_alignment_audit.org  20.05_parser_surface_map.org
docs/90_operations/: 90.01_implementation_status.org  90.02_verification_report_consumption.org
examples/: html-slugify.rs  markdown.rs  parse.rs
fuzz/: Cargo.toml
provider/: asp-provider-workspace-install.json
src/: agent.rs  cli.rs  config.rs  entities.rs  fmt.rs  lib.rs  lint.rs  lint_attachments.rs  lint_babel.rs  lint_contracts.rs  lint_contracts_builtin.rs  lint_crypt.rs  lint_file_links.rs  lint_lifecycle.rs  lint_model.rs  lint_priority.rs  lint_progress.rs  lint_properties.rs  lint_render.rs  lint_sdd.rs  lint_table_formulas.rs  lint_task_blockers.rs  main.rs  org.rs  replace.rs  syntax_ast.rs
src/ast/: affiliated_keyword.rs  block.rs  clock.rs  cloze.rs  comment.rs  document.rs  drawer.rs  entity.rs  fixed_width.rs  generate.js  generated.rs  headline.rs  inline_call.rs  inline_src.rs  keyword.rs  link.rs  list.rs  macros.rs  mod.rs  planning.rs  snippet.rs  support.rs  table.rs  timestamp.rs
src/cli/: document.rs  document_index.rs  document_json.rs  driver.rs  driver_fmt_lint.rs  driver_paths.rs  driver_sdd.rs  driver_tasks.rs  driver_usage.rs  eval.rs  mod.rs  org_contract_registry.rs  org_contract_trace.rs
src/document/: command.rs  command_format.rs  command_query.rs  command_render.rs  command_search.rs  elements.rs  line_index.rs  markdown_elements.rs  memory_projection.rs  mod.rs  model.rs  org_elements.rs  packets.rs  source_prefilter.rs  source_selection.rs
src/export/: event.rs  html.rs  latex.rs  markdown.rs  mod.rs  traverse.rs
src/semantic_ast/: agenda.rs  agenda_filter.rs  agenda_match.rs  agenda_model.rs  agenda_time.rs  agenda_urgency.rs  agenda_urgency_model.rs  agenda_view.rs  agenda_view_model.rs  agenda_workspace.rs  agenda_workspace_model.rs  agent_planning.rs  agent_planning_model.rs  attachment_inventory.rs  attachment_inventory_model.rs  attachment_model.rs  babel_eval.rs  babel_eval_model.rs  block_metadata.rs  block_model.rs  block_syntax.rs  capture.rs  capture_command.rs  capture_model.rs  citation_export.rs  citation_export_model.rs  citation_metadata.rs  clock_issue_model.rs  clock_issues.rs  clock_rollup.rs  clock_rollup_model.rs  clock_table_properties.rs  clock_table_time.rs  column_summaries.rs  column_summary_model.rs  column_view_model.rs  column_views.rs  conversion.rs  conversion_helpers.rs  conversion_nodes.rs  (+104 more)
src/semantic_ast/org_elements_query_expr/: core.rs  core_contract.rs  core_parser.rs  core_predicate.rs  core_types.rs  index.rs  mod.rs  surface.rs
src/syntax/: block.rs  citation.rs  clock.rs  cloze.rs  combinator.rs  comment.rs  cookie.rs  diary_sexp.rs  document.rs  drawer.rs  dyn_block.rs  element.rs  emphasis.rs  entity.rs  fixed_width.rs  fn_def.rs  fn_ref.rs  green.rs  headline.rs  inline_call.rs  inline_src.rs  inlinetask.rs  input.rs  keyword.rs  kind.rs  latex_environment.rs  latex_fragment.rs  line_break.rs  link.rs  list.rs  macros.rs  mod.rs  object.rs  paragraph.rs  parser_contract.rs  planning.rs  radio_target.rs  rule.rs  snippet.rs  subscript_superscript.rs  (+3 more)
tests/: integration_test.rs  semantic_ast.rs
tests/fixtures/fmt/: complex-table-alignment.org  default-write.org  directory-a.org  directory-b.org  (+6 more)
tests/integration/: agent_cli.rs  capture_cli.rs  contract_evaluation.rs  eval_cli.rs  export_cli.rs  export_cli_common.rs  export_cli_markdown.rs  export_cli_org.rs  fmt_cli.rs  fmt_links.rs  fmt_table.rs  harness_report_consumer.rs  html.rs  latex.rs  lint_attachments.rs  lint_babel.rs  lint_builtin_contracts.rs  lint_contract.rs  lint_crypt.rs  lint_file_links.rs  lint_fix_cli.rs  lint_fmt.rs  lint_lifecycle.rs  lint_progress.rs  lint_property_schema.rs  lint_table_formulas.rs  lint_task_blockers.rs  markdown.rs  parse.rs  scenario_benchmark.rs  sdd.rs  task_cli.rs
tests/snapshots/: semantic_ast__semantic_agenda_entries.snap  semantic_ast__semantic_agenda_match_filter_entries.snap  semantic_ast__semantic_ast_html_compatibility.snap  semantic_ast__semantic_bare_ast.snap  semantic_ast__semantic_block_lines.snap  semantic_ast__semantic_fixed_width_lines.snap  semantic_ast__semantic_priority_properties.snap
tests/unit/: document_command.rs  document_line_index.rs  document_query_prefilter.rs  document_query_prefilter_project.rs  document_source_prefilter.rs  document_source_selection.rs  elements_bridge_query_json.rs  lib.rs  lint_metadata.rs  org_contract_evaluation.rs  org_contract_reference.rs  org_contract_source_validation.rs  org_elements_query_expr.rs
wasm/: Cargo.toml  index.html  package.json
wasm/src/: bindings.rs  lib.rs
(+211 files in other folders)
