[workspace]
resolver = "2"
members = [".", "./wasm"]

[package]
name = "orgize"
version = "0.10.0-alpha.10"
authors = ["PoiScript <poiscript@gmail.com>"]
repository = "https://github.com/tao3k/orgize"
edition = "2021"
license = "MIT"
description = "A Rust library for parsing org-mode files."
readme = "README.md"
keywords = ["orgmode", "org-mode", "emacs", "parser"]

[package.metadata.docs.rs]
all-features = true

[features]
default = []
indexmap = ["dep:indexmap"]
chrono = ["dep:chrono"]
tracing = ["dep:tracing"]
syntax-org-fc = []

[dependencies]
bytecount = "0.6.9"
cfg-if = "1.0.4"
chrono = { version = "0.4.44", optional = true }
indexmap = { version = "2.14.0", optional = true }
jetscii = "0.5.3"
memchr = "2.8.0"
nom = { version = "8.0.0", default-features = false, features = ["std"] }
rowan = "0.16.1"
tracing = { version = "0.1.44", optional = true }

[dev-dependencies]
criterion = "0.8.2"
insta = "1.47.2"
rust-lang-project-harness = { git = "https://github.com/tao3k/rust-lang-project-harness", rev = "cfe30635afdaf194891389ce38ec8671c1493471" }
slugify = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["fmt"] }

[build-dependencies]
rust-lang-project-harness = { git = "https://github.com/tao3k/rust-lang-project-harness", rev = "cfe30635afdaf194891389ce38ec8671c1493471" }

[[bench]]
name = "parse"
harness = false

[[example]]
name = "parse"
required-features = ["tracing"]

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
