[workspace]
resolver = "2"
members = ["."]

[package]
name = "orgize"
version = "0.10.0-alpha.10"
authors = ["PoiScript <poiscript@gmail.com>"]
repository = "https://github.com/tao3k/orgize"
edition = "2024"
license = "MIT"
description = "A Rust library for parsing org-mode files."
readme = "README.md"
keywords = ["orgmode", "org-mode", "emacs", "parser"]

[package.metadata.docs.rs]
all-features = true

[features]
default = []
indexmap = ["dep:indexmap"]
chrono = ["dep:chrono"]
tracing = ["dep:tracing"]
datafusion-sql = ["dep:datafusion"]
syntax-org-fc = []

[dependencies]
bytecount = "0.6.9"
cfg-if = "1.0.4"
chrono = { version = "0.4.44", optional = true }
datafusion = { version = "53", default-features = false, features = ["sql"], optional = true }
indexmap = { version = "2.14.0", optional = true }
jetscii = "0.5.3"
memchr = "2.8.0"
nom = { version = "8.0.0", default-features = false, features = ["std"] }
rowan = "0.16.1"
serde_json = "1.0.145"
tracing = { version = "0.1.44", optional = true }

[dev-dependencies]
criterion = "0.8.2"
insta = "1.47.2"
rust-lang-project-harness = { git = "https://github.com/tao3k/rust-lang-project-harness", rev = "acf9295ef9ef03caeb7ffa85c5e0b2389abe7d67" }
slugify = "0.1"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.23", features = ["fmt"] }

[build-dependencies]
rust-lang-project-harness = { git = "https://github.com/tao3k/rust-lang-project-harness", rev = "acf9295ef9ef03caeb7ffa85c5e0b2389abe7d67" }

[[bench]]
name = "parse"
harness = false

[[example]]
name = "parse"
required-features = ["tracing"]

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
