[workspace]
resolver = "2"
members = [".", "build-support"]

[package]
name = "orgize"
version = "0.10.0-alpha.10"
authors = ["PoiScript <poiscript@gmail.com>"]
repository = "https://github.com/tao3k/orgize"
edition = "2024"
license = "MIT"
description = "A Rust library for parsing org-mode files."
readme = "README.md"
keywords = ["orgmode", "org-mode", "emacs", "parser"]

[package.metadata.docs.rs]
all-features = true

[features]
default = []
indexmap = ["dep:indexmap"]
chrono = ["dep:chrono"]
tracing = ["dep:tracing"]
datafusion-sql = ["dep:datafusion"]
syntax-org-fc = []
md = ["dep:comrak"]

[dependencies]
bytecount = "0.6"
cfg-if = "1"
chrono = { version = "0.4", optional = true }
comrak = { version = "0.52", default-features = false, optional = true }
datafusion = { version = "53", default-features = false, features = ["sql"], optional = true }
indexmap = { version = "2", optional = true }
jetscii = "0.5"
memchr = "2"
nom = { version = "8", default-features = false, features = ["std"] }
rowan = "0.16"
serde_json = "1"
tracing = { version = "0.1", optional = true }

[dev-dependencies]
criterion = "0.8"
insta = "1"
rust-lang-project-harness = { git = "https://github.com/tao3k/rust-lang-project-harness", rev = "f5f8f312f8c23a182c6ade558f06d36af55cbc5b", version = "0.1" }
slugify = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["fmt"] }

[build-dependencies]
orgize-build-support = { path = "build-support" }
rust-lang-project-harness = { git = "https://github.com/tao3k/rust-lang-project-harness", rev = "f5f8f312f8c23a182c6ade558f06d36af55cbc5b", version = "0.1" }

[[bench]]
name = "parse"
harness = false

[[example]]
name = "parse"
required-features = ["tracing"]

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
# Thin LTO keeps useful cross-crate optimization without the full monolithic
# link cost of fat LTO. This is the right default for CI and open-source
# release builds where rebuild time matters.
opt-level = 3
lto = "thin"
codegen-units = 4
strip = "symbols"
panic = "abort"
