[package]
name = "orgize-wasm"
publish = false
version = "0.10.0-alpha.7"
authors = ["PoiScript <poiscript@gmail.com>"]
repository = "https://github.com/tao3k/orgize"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
orgize = { path = ".." }
wasm-bindgen = "0.2.120"

[build-dependencies]
rust-lang-project-harness = { git = "https://github.com/tao3k/rust-lang-project-harness", rev = "7f359a988861ad8529612d4970ea528ee6697989" }
